# iptv-epg-trim

./: .gitconfig.project  .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  copilot-rules.md  dependabot.yml
.github/workflows/: codeql.yml  copilot-pr-review-request.yml  dependabot-copilot-automerge.yml  dependency-license-audit.yml  dev-build.yml  owner-guard.yml
scripts/: build_executable.py  install_latest_dev_service.sh
specs/: epg_filtering_spec.md  http_api_spec.md  playlist_parsing_spec.md  product_spec.md
src/epg_trim/: __init__.py  downloader.py  epg_cleaner.py  main.py  playlist_parser.py  scheduler.py  server.py
tests/: test_epg_cleaner.py  test_playlist_parser.py  test_server.py
