[project]
name = "epg-trim"
version = "0.1.0"
description = "Filter XMLTV EPG files using IPTV playlist channel references"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
  "lxml>=5.2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "apscheduler>=3.10.4",
]

[project.scripts]
epg-trim = "epg_trim.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
